src/styles.css
@import "tailwindcss";

body {
  @apply m-0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

@theme {
  --color-primary: #161A26;
  --color-highlights: #3661E2;

  --font-inter: 'inter', sans-serif;
}

@font-face {
  font-family: 'inter';
  src: url('/fonts/Inter_18pt-Regular.ttf');
}

.text-stroke {
  -webkit-text-stroke: 0.5px;
  -webkit-text-stroke-color: var(--color-highlights);
}

